@@ -1,6 +1,5 @@
 ## This is repo for java exercises
 
-
 ---
 
 ### To check your test coverage, open the following file:
@@ -10,6 +9,7 @@ target/site/jacoco/index.html
 
 **Dont forget to add the plugin**
 ```xml
+
 <plugins>
     <plugin>
         <groupId>org.jacoco</groupId>
@@ -27,6 +27,12 @@ target/site/jacoco/index.html
                 <goals>
                     <goal>report</goal>
                 </goals>
+                <configuration>
+                    <excludes>
+                        <exclude>**/MainMock.class</exclude>
+                        <exclude>**/Player.class</exclude>
+                    </excludes>
+                </configuration>
             </execution>
             <execution>
                 <id>jacoco-check</id>
@@ -51,4 +57,19 @@ target/site/jacoco/index.html
         </executions>
     </plugin>
 </plugins>
+```
+
+---
+
+**Resources**
+
+[Unit Test - YouTube](https://youtu.be/mEzoe6KSUu8)
+
+[Unit Test with Mockito - YouTube](https://youtu.be/0VivFIbTZ3c)
+
+---
+
+**JVM Command**
+```bash
+-ea -XX:+EnableDynamicAgentLoading -Xshare:off
 ```
